work in progress on labels

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       height: 600px;
       width: 100%;
     }
+    .js-fill {
+      background: rgb(2,0,255) !important;
+    }
   </style>
   <link rel="stylesheet" href="https://js.arcgis.com/4.15/esri/themes/light/main.css">
   <script>
