Added reverse profile button and functionality

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Elevation Profile</title>
   <link rel="stylesheet" href="https://js.arcgis.com/4.15/esri/themes/light/main.css">
     <link rel="stylesheet" href="./app/css/main.css">
+    <script src="https://kit.fontawesome.com/6ac00f6e19.js" crossorigin="anonymous" defer></script>
   <script>
     var locationPath = location.pathname.replace(/\/[^\/]+$/, "");
     window.dojoConfig = {
@@ -53,7 +54,7 @@
 <body>
   <div id="viewDiv" class="esri-widget"></div>
   <div id="test"></div>
-  <button id='createGraph' style="position: absolute;top:10px; right: 20px;">Elevation profile</button>
+  <button id='createGraph' style="position: absolute;top:10px; right: 20px;">Elevation profile </button>
 </body>
 
 </html>
