Adding reporting tools

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               slopeThreshold: 4,
               unit: 'feet'
             });
-
+            // widget.postInitialize();
             view.ui.add(widget, 'bottom-right');
 
             widget.startTest();
